--- a/proyecto_integrador.ipynb
+++ b/proyecto_integrador.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,11 +119,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 16715 entries, 0 to 16714\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column           Non-Null Count  Dtype  \n",
+      "---  ------           --------------  -----  \n",
+      " 0   Name             16713 non-null  object \n",
+      " 1   Platform         16715 non-null  object \n",
+      " 2   Year_of_Release  16446 non-null  float64\n",
+      " 3   Genre            16713 non-null  object \n",
+      " 4   NA_sales         16715 non-null  float64\n",
+      " 5   EU_sales         16715 non-null  float64\n",
+      " 6   JP_sales         16715 non-null  float64\n",
+      " 7   Other_sales      16715 non-null  float64\n",
+      " 8   Critic_Score     8137 non-null   float64\n",
+      " 9   User_Score       10014 non-null  object \n",
+      " 10  Rating           9949 non-null   object \n",
+      "dtypes: float64(6), object(5)\n",
+      "memory usage: 1.4+ MB\n"
+     ]
+    }
+   ],
    "source": [
-    "#2.1 Reemplaza los nombres de las columnas (ponlos en minúsculas)."
+    "df_games.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['name', 'platform', 'year_of_release', 'genre', 'na_sales', 'eu_sales',\n",
+      "       'jp_sales', 'other_sales', 'critic_score', 'user_score', 'rating'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "#2.1 Reemplaza los nombres de las columnas (ponlos en minúsculas).\n",
+    "new_columns=[]\n",
+    "for columns_lower in df_games.columns:\n",
+    "    lower=columns_lower.lower()\n",
+    "    new_columns.append(lower)\n",
+    "df_games.columns=new_columns\n",
+    "\n",
+    "print(df_games.columns)"
    ]
   }
  ],
